# legal_assistant_sme

./: .env  MULTILINGUAL_FEATURES.md  README.md  app.py  config.py  main.py  pyproject.toml  requirements.txt  test_multilingual.py
.streamlit/: config.toml
modules/: document_processor.py  hindi_translator.py  language_detector.py  llm_handler.py  nlp_pipeline.py  report_generator.py  risk_analyzer.py
templates/: employment_agreement.md
templates/knowlegde_base/:  risky_clauses.json
